; ModuleID = '/home/carl/AnghaBench/xLua/build/extr_i64lib.c_uint64_compare.c'
source_filename = "/home/carl/AnghaBench/xLua/build/extr_i64lib.c_uint64_compare.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @uint64_compare to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @uint64_compare(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i64 @lua_touint64(i32* %5, i32 1)
  store i64 %6, i64* %3, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = call i64 @lua_touint64(i32* %7, i32 2)
  store i64 %8, i64* %4, align 8
  %9 = load i32*, i32** %2, align 8
  %10 = load i64, i64* %3, align 8
  %11 = load i64, i64* %4, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %14

13:                                               ; preds = %1
  br label %20

14:                                               ; preds = %1
  %15 = load i64, i64* %3, align 8
  %16 = load i64, i64* %4, align 8
  %17 = icmp slt i64 %15, %16
  %18 = zext i1 %17 to i64
  %19 = select i1 %17, i32 -1, i32 1
  br label %20

20:                                               ; preds = %14, %13
  %21 = phi i32 [ 0, %13 ], [ %19, %14 ]
  %22 = call i32 @lua_pushinteger(i32* %9, i32 %21)
  ret i32 1
}

declare dso_local i64 @lua_touint64(i32*, i32) #1

declare dso_local i32 @lua_pushinteger(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
